Products.CMFCore Changelog
==========================

2.3.0-alpha (unreleased)
------------------------

- Fix content exportimport when Title or Description are unicode (merge from
  2.2 branch).
  
- tests base: Tightened security for anonymous test user.

- Load permissions.zcml from Products.Five in the test to fix tests
  with Zope 2.12.

- notifyWorkflowCreated only to IWorkflowAware, possibly following adaption on
  IObjectAddedEvent.

- Adapterize workflow storage lookups.

- utils: Added FakeExecutableObject.
  It can be used to set proxy roles in trusted code.

- tests base: Removed obsolete test utils.

- testing: Removed broken run function.
  Unit test modules are no longer directly executable.

- Require at least Zope 2.12.11.

- DateTime 2.12.5 does away with a special case representing
  DateTime values for midnight (00:00:00) without their time and
  time zone values. So DateTimes formerly rendered as
  ``2010/01/01`` in the UTC timezone now render as
  ``2010/01/01 00:00:00 UTC``. Several unit tests that relied on 
  the old-style representation had to be fixed.

- Get most tests working under Zope 2.13.0a2.

- Added dependency on the new ``Products.ZSQLMethods`` distribution and updated
  Zope2 requirement accordingly.

- CookieCrumbler: Removed redirect support.
  The Unauthorized handling and redirects are now part of CMFDefault.

- Use the standard libraries doctest module.

- Updated setDefaultRoles to use the addPermission API if available.

- Added a permissions.zcml file defining our own permissions. This was
  formerly done in Zope 2's Products.Five.

- Actions and TypeInformation: Clear the compiled *_expr_object
  property when the *_expr property is cleared.

- Changed GenericSetup import handlers to fail silently if they
  are called in a context that does not contain the items they 
  import.

- Removed zope.app.testing dependency.

- Import BeforeTraverseEvent from new location if available.
